Init guss webfonts with subset of weights

--- a/frontend/assets/stylesheets/_vars.scss
+++ b/frontend/assets/stylesheets/_vars.scss
@@ -53,7 +53,7 @@ $mq-breakpoints: (
 // Fonts
 // =============================================================================
 
-$f-data: 'Guardian Agate Sans 1 Web', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif !default;
+$f-data: 'Guardian Text Sans Web', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif !default;
 $f-serif-text: 'Guardian Text Egyptian Web', Georgia, serif !default;
 $f-serif-headline: 'Guardian Egyptian Web', Georgia, serif !default;
 $f-sans-serif-text: 'Guardian Text Sans Web', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif !default;
