benefit listing enhancements and mobile / tablet views

--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -31,7 +31,7 @@
                     }
                 </div>
             }
-            <div class="package__title-container package__title-container--@tier.toString.toLowerCase">
+            <div class="package__title-container package__title-container--@tier.toString.toLowerCase u-cf">
                 <h2 class="package__title">@tier</h2>
                 @fragments.benefits.priceInfo(Benefits.details(tier))
             </div>
