Distinguish test users
At the moment, the only change in behaviour is to add a 'VALID TEST USER'
HTML comment just above the users first & last name on the enter-details
joining page.

--- a/frontend/app/views/fragments/form/nameDetail.scala.html
+++ b/frontend/app/views/fragments/form/nameDetail.scala.html
@@ -1,4 +1,9 @@
 @(firstName: Option[String], lastName: Option[String])
+@import configuration.Config
+
+@if(Config.testUsers.isValid(firstName.getOrElse(""))) {
+    <!-- VALID TEST USER -->
+}
 
 <fieldset class="fieldset">
     <div class="fieldset__heading">
