--- a/frontend/assets/stylesheets/components/_benefits.scss
+++ b/frontend/assets/stylesheets/components/_benefits.scss
@@ -1,10 +1,14 @@
 //TODO start of splitting benefits work into one set of styles where it makes sense
 .benefits-item {
 	@include mq(tablet) {
-	    width: 30%;
+	    width: rem(200px);
 	    float: left;
 	    height: rem(150px);
-	    margin: 0 rem(1.66%);
+	    margin: 0 rem($gs-gutter / 2);
+
+	    .about-membership & {
+	    	height: rem(62px);
+	    }
 	}
 
 	@include mq(desktop) {
@@ -12,12 +16,26 @@
 		float: none;
 		height: auto;
 		margin: 0;
+
+		.about-membership & {
+			height: auto;
+		}
+	}
+}
+
+@include mq(tablet) {
+	.benefits-item:first-child {
+		margin-left: 0;
+	}
+	.benefits-item:nth-child(3n+3) {
+		margin-left: rem($gs-gutter / 2);
+		margin-right: 0;
 	}
 }
 
 .benefits-title {
 	@include fs-bodyHeading(2);
-    border-top: rem(1px) solid $c-neutral3;
+    border-top: rem(1px) dotted $c-neutral3;
     padding: rem(7px) 0 rem($gs-baseline / 6) 0;
     clear: both;
 }
