Fix related Twitter share and config style

--- a/frontend/app/views/fragments/social.scala.html
+++ b/frontend/app/views/fragments/social.scala.html
@@ -20,7 +20,7 @@
             </a>
         </li>
         <li class="social__item">
-            <a class="social__action" href="https://twitter.com/intent/tweet?text=@encodePathSegment("I've just joined " + Config.twitter.username + ". Check it out", "utf-8");url=@Config.membershipUrl;related=@Config.twitter.username">
+            <a class="social__action" href="https://twitter.com/intent/tweet?text=@encodePathSegment("I've just joined @" + Config.twitterUsername + ". Check it out", "utf-8");url=@Config.membershipUrl;related=@Config.twitterUsername">
                 <span class="u-h">Share on Twitter</span>
                 <span class="social-icon">
                     <i class="icon-sprite icon-sprite-share-twitter-colour"></i>
