--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -31,11 +31,11 @@
 
         <meta property="og:type" content="website"/>
         <meta property="fb:app_id" content="@Config.facebookAppId"/>
-        <meta name="twitter:site" content="@Config.twitter.username"/>
-        <meta name="twitter:app:name:iphone" content="@Config.twitter.iphoneAppName"/>
-        <meta name="twitter:app:id:iphone" content="@Config.twitter.iphoneAppId"/>
-        <meta name="twitter:app:name:googleplay" content="@Config.twitter.googleplayAppName"/>
-        <meta name="twitter:app:id:googleplay" content="@Config.twitter.googleplayAppId"/>
+        <meta name="twitter:site" content="@@@Config.twitterUsername"/>
+        <meta name="twitter:app:name:iphone" content="@Config.twitterIphoneAppName"/>
+        <meta name="twitter:app:id:iphone" content="@Config.twitterIphoneAppId"/>
+        <meta name="twitter:app:name:googleplay" content="@Config.twitterGoogleplayAppName"/>
+        <meta name="twitter:app:id:googleplay" content="@Config.twitterGoogleplayAppId"/>
         <meta name="twitter:card" content="summary"/>
 
         <title>@(Config.siteTitle + " - " + title)</title>
