--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -9,7 +9,7 @@
 
 @benefit(tier: com.gu.membership.salesforce.Tier.Tier, defaultSelection: com.gu.membership.salesforce.Tier.Tier) = {
     <div class="tickets-select-form__section">
-        <div class="tickets-select-form__header u-cf">
+        <div class="tickets-select-form__header tickets-select-form__header--@tier.toString.toLowerCase u-cf">
             <label class="tickets-select-form__label" for="@tier.toString.toLowerCase">
                 <input class="tickets-select-form__input"
                        type="radio"
@@ -30,7 +30,7 @@
                 </a>
             </div>
         </div>
-        <div class="tickets-select-form__detail hidden-mobile">
+        <div class="tickets-select-form__detail hidden-mobile u-cf">
             <p class="tickets-select-form__leadin">@Benefits.details(tier).leadin</p>
             <ul class="u-unstyled">
                 @for((header, body, icon) <- Benefits.details(tier).list) {
