--- a/frontend/app/views/fragments/analytics/googleJoinerConversion.scala.html
+++ b/frontend/app/views/fragments/analytics/googleJoinerConversion.scala.html
@@ -3,18 +3,20 @@
 @import configuration.Config
 
 @if(Config.stage == "PROD") {
-	<script type="text/javascript">
-		var google_conversion_id = 967211513;
-		var google_conversion_language = "en";
-		var google_conversion_format = "3";
-		var google_conversion_color = "ffffff";
-		var google_conversion_label = "@Config.googleAdwordsJoinerConversionLabel(tier)";
-		var google_remarketing_only = false;
-	</script>
-	<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js"></script>
-	<noscript>
-		<div style="display:inline;">
-			<img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/967211513/?label=@Config.googleAdwordsJoinerConversionLabel(tier)&amp;guid=ON&amp;script=0"/>
-		</div>
-	</noscript>
+    <div class="is-hidden">
+        <script type="text/javascript">
+            var google_conversion_id = 967211513;
+            var google_conversion_language = "en";
+            var google_conversion_format = "3";
+            var google_conversion_color = "ffffff";
+            var google_conversion_label = "@Config.googleAdwordsJoinerConversionLabel(tier)";
+            var google_remarketing_only = false;
+        </script>
+        <script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js"></script>
+        <noscript>
+            <div style="display:inline;">
+                <img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/967211513/?label=@Config.googleAdwordsJoinerConversionLabel(tier)&amp;guid=ON&amp;script=0"/>
+            </div>
+        </noscript>
+    </div>
 }
