--- a/frontend/assets/stylesheets/pages/_tickets.scss
+++ b/frontend/assets/stylesheets/pages/_tickets.scss
@@ -12,6 +12,7 @@
         padding: rem($gs-gutter) rem($gs-gutter * 1.5);
         top: 0;
         left: 0;
+        z-index: 5;
     }
 
     .tickets-select-form__input {
@@ -44,7 +45,11 @@
         &--partner {
             background-color: $mem-brandLightblue;
             .package__title,
-            .price-info { color: $black; }
+            .price-info,
+            .tickets-select-form__tier-name,
+            .price-info__sub-detail { 
+                color: $black; 
+            }
         }
 
         &--patron {
@@ -56,7 +61,11 @@
     .tickets-select-form-header__secondary {
         position: relative;
         padding: rem($gs-baseline) rem($gs-baseline) rem($gs-baseline) 0;
-        margin-left: rem(73px);
+        margin-left: rem($gs-baseline);
+
+        @include mq(tablet) {
+            margin-left: rem(73px);
+        }
     }
 
     .tickets-select-form__detail {
@@ -74,9 +83,11 @@
 
     .tickets-select-form__tier-name {
         padding-bottom: rem($gs-baseline);
+        padding-left: rem(95px);
         color: $white;
 
         @include mq(tablet) {
+            padding-left: 0;
             margin-left: rem(35px);
         }
     }
@@ -85,14 +96,14 @@
         position: absolute;
         top: 0;
         right: 0;
-        width: 100%;
-        height: 100%;
+        width: rem(60px);
+        height: rem(60px);
     }
 
     .tickets-select-form__toggle-icon {
         position: absolute;
-        right: rem(20px);
-        top: rem(40px);
+        right: rem($gs-gutter);
+        top: rem($gs-gutter);
     }
 
     .tickets-select-form__toggle-icon--open {
@@ -121,7 +132,8 @@
 
     &.price-info-container--last {
         display: block;
-        width: 70%;
+        width: rem(190px);
+        margin-left: rem($gs-gutter * 3);
 
         @include mq(tablet) {
             clear: both;
