--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -761,6 +761,12 @@
     .event-item__detail {
         border-top: rem(1px) dotted $c-neutral3;
         padding: rem($gs-baseline / 2) 0 rem($gs-baseline / 2) rem($gs-gutter * 2);
+
+        &:last-child,
+        p:last-child {
+            margin-bottom: 0;
+            padding-bottom: 0;
+        }
     }
 
     .event-item__location {
