Better Scala syntax suggested by @wpf500
https://github.com/guardian/membership/pull/712#discussion-diff-19074869

--- a/frontend/app/views/fragments/form/nameDetail.scala.html
+++ b/frontend/app/views/fragments/form/nameDetail.scala.html
@@ -1,7 +1,7 @@
 @(firstName: Option[String], lastName: Option[String])
-@import configuration.Config
+@import configuration.Config.testUsers
 
-@if(Config.testUsers.isValid(firstName.getOrElse(""))) {
+@if(firstName.exists(testUsers.isValid)) {
     <!-- VALID TEST USER -->
 }
 
