--- a/frontend/app/views/fragments/social.scala.html
+++ b/frontend/app/views/fragments/social.scala.html
@@ -21,7 +21,7 @@
             </a>
         </li>
         <li class="social__item">
-            <a class="social__action" href="https://twitter.com/intent/tweet?text=@encodePathSegment(twitterMessage, "utf-8");url=@twitterUrl;related=@Config.twitterUsername">
+            <a class="social__action" href="https://twitter.com/intent/tweet?text=@encodePathSegment(twitterMessage, "utf-8")&amp;related=@Config.twitterUsername&amp;url=@twitterUrl">
                 <span class="u-h">Share on Twitter</span>
                 <span class="social-icon">
                     <i class="icon-sprite icon-sprite-share-twitter-colour"></i>
