--- a/frontend/app/views/fragments/benefits/priceInfo.scala.html
+++ b/frontend/app/views/fragments/benefits/priceInfo.scala.html
@@ -11,7 +11,7 @@
             <div class="price-info__detail">£@pricing.yearly<span class="price-info__detail--sm-date">/year</span></div>
         </div>
         <div class="price-info__container-inner price-info__container-inner--last">
-            <div class="price-info__detail">£@pricing.monthly<span class="price-info__detail--sm-date">/month</span></div>
+            <div class="price-info__detail price-info__detail--right">£@pricing.monthly<span class="price-info__detail--sm-date">/month</span></div>
         </div>
     }
 </div>
