--- a/frontend/assets/stylesheets/pages/_events.scss
+++ b/frontend/assets/stylesheets/pages/_events.scss
@@ -294,6 +294,22 @@
     }
 }
 
+.event__social {
+    width: rem(gs-span(2) + $gs-gutter);
+    margin-bottom: rem($gs-gutter * 2);
+
+    @include mq(tablet) {
+        float: left;
+    }
+}
+
+.event__social-header {
+    @include fs-textSans(1);
+    border-top: rem(1px) solid $c-neutral6;
+    padding-bottom: rem($gs-baseline / 2);
+    padding-top: rem(3px);
+}
+
 .event-content__info {
     background-color: $c-neutral7;
     margin-bottom: rem($gs-gutter);
