--- a/frontend/assets/stylesheets/module/_social.scss
+++ b/frontend/assets/stylesheets/module/_social.scss
@@ -15,5 +15,9 @@
 
 .social-icon {
     @extend %icon-holder-circle;
+    border-color: $c-neutral2;
+}
+
+.social-icon--colour {
     border: 0;
 }
