Use grey social sprites on event page

--- a/frontend/app/views/fragments/joiner/completePurchase.scala.html
+++ b/frontend/app/views/fragments/joiner/completePurchase.scala.html
@@ -18,7 +18,7 @@
 } else {
     <section class="content__container content__container--slim">
         <h2 class="content__headline">Tell your friends</h2>
-        @fragments.social("I've just joined Guardian Membership", "The Guardian is coming to life through live events and meet-ups. I've joined to take part in the conversations and experiences that matter.\n\nCheck it out:\n" + Config.membershipUrl, Config.membershipUrl, "With @" + Config.twitterUsername + ", the Guardian is coming to life through events and meet-ups. I've just joined. Check it out.", Config.membershipUrl)
+        @fragments.social("I've just joined Guardian Membership", "The Guardian is coming to life through live events and meet-ups. I've joined to take part in the conversations and experiences that matter.\n\nCheck it out:\n" + Config.membershipUrl, Config.membershipUrl, "With @" + Config.twitterUsername + ", the Guardian is coming to life through events and meet-ups. I've just joined. Check it out.", Config.membershipUrl, true)
     </section>
     <section class="content__container content__container--slim">
         <h2 class="content__headline">Find Guardian Live events</h2>
