Push TestUsers stuff out of Config into it's own TestUsers object
https://github.com/guardian/membership/pull/712#discussion_r19074812

--- a/frontend/app/views/fragments/form/nameDetail.scala.html
+++ b/frontend/app/views/fragments/form/nameDetail.scala.html
@@ -1,5 +1,5 @@
 @(firstName: Option[String], lastName: Option[String])
-@import configuration.Config.testUsers
+@import utils.TestUsers.testUsers
 
 @if(firstName.exists(testUsers.isValid)) {
     <!-- VALID TEST USER -->
